--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
       <div class="bird swing1"></div>
     </div>
     <p class="info">回车键开始/暂停，空格键跳跃</p>
+    <!-- <div class="infoScore">得分:<span class="score">0</span></div> -->
     <script src="./scripts/Rectangle.js"></script>
     <script src="./scripts/Sky.js"></script>
     <script src="./scripts/Ground.js"></script>
-    <!-- <script src="./scripts/Bird.js"></script>
+    <script src="./scripts/Bird.js"></script>
     <script src="./scripts/Pipe.js"></script>
-    <script src="./scripts/Game.js"></script> -->
+    <script src="./scripts/Game.js"></script>
   </body>
 </html>
